--- a/src/app/components/FirstComponent/firstComponent.html
+++ b/src/app/components/FirstComponent/firstComponent.html
@@ -2,4 +2,8 @@
 
 <ul>
   <li>Name: {{name}}</li>
+  <li>Available: {{isAvailable}}</li>
+  <li>Description: {{description}}</li>
+  <li>Price: {{price}}</li>
+  <li>Categories: {{category}}</li>
 </ul>
